--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ sudo: required
 dist: trusty
 osx_image: xcode8.2
 script:
-  - eval "$(curl -sL https://swift.vapor.sh/ci)"
+  - eval "$(curl -sL https://raw.githubusercontent.com/brokenhandsio/swift/master/ci)"
