--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ os:
 language: generic
 sudo: required
 dist: trusty
-osx_image: xcode8.2
+osx_image: xcode8.3
 script:
-  - eval "$(curl -sL https://raw.githubusercontent.com/brokenhandsio/swift/master/ci)"
+  - eval "$(curl -sL https://swift.vapor.sh/ci-3.1)"
+  - eval "$(curl -sL https://swift.vapor.sh/codecov)"
