Make Travis emails a bit less spammy

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,8 @@ script:
 
 after_success:
     - eval "$(curl -sL https://swift.vapor.sh/codecov)"
+
+notifications:
+  email:
+    on_success: change
+    on_failure: change
