--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
     - name: Upload code coveage
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_UPLOAD_KEY }}
         file: .build/x86_64-unknown-linux/debug/codecov/SteamPress.json
