Convert code coverage into lcov (maybe)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
       run: swift test --enable-test-discovery --enable-code-coverage
     - name: Setup container for codecov upload
       run: apt-get update && apt-get install curl
+    - name: Process coverage file
+      run: llvm-cov export .build/x86_64-unknown-linux/debug/SteamPressPackageTests.xctest -instr-profile=.build/x86_64-unknown-linux/debug/codecov/default.profdata > coverage.lcov
     - name: Upload code coveage
       uses: codecov/codecov-action@v1
       with:
